k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: LoadBalancer  # Changed from ClusterIP to LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5555        # The port exposed by the load balancer
      targetPort: 80    # The target port on the container
