k8s/transaction-db.-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transactions-db
  name: transactions-db
spec:
  type: ClusterIP
  ports:
  - name: "db2-service"
    port: 3305
    targetPort: 3306
  selector:
    app: transactions-db
