k8s/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ebank-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers: 
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ebank-clients
spec:
  hosts:
  - "*" 
  gateways:
  - ebank-gateway
  http:
  - match:
    - uri:
        exact: /api/client/clients
    route:
    - destination:
        host: client-service
        port:
          number: 9000
  

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ebank-finance
spec:
  hosts:
  - "*" 
  gateways:
  - ebank-gateway
  http:
  - match:
      - uri:
          exact: /api/finance/devise
    route:
      - destination:
          host: finance-service
          port:
            number: 9001
  - match: 
      - uri: 
          exact: /api/finance/credit
    route:
      - destination:
          host: finance-service
          port:
            number: 9001

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ebank-model
spec:
  hosts:
  - "*" 
  gateways:
  - ebank-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: ml-model.default.svc.cluster.local
        port:
          number: 5000
  - match:
    - uri:
        exact: /predict
    route:
    - destination:
        host: ml-model.default.svc.cluster.local
        port:
          number: 5000

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ebank-transactions
spec:
  hosts:
  - "*" 
  gateways:
  - ebank-gateway
  http:
  - match:
      - uri:
          exact: /api/transactions/clients/{rib}
    route:
      - destination:
          host: transactions-service
          port:
            number: 9001
  - match: 
      - uri: 
          exact: /api/finance/credit
    route:
      - destination:
          host: transactions-service
          port:
            number: 9003
